--- a/src/components/PatientCaring/PatientCaring.module.css
+++ b/src/components/PatientCaring/PatientCaring.module.css
@@ -8,18 +8,8 @@
   align-items: center;
 }
 
-.left {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-
 .imgBox1 {
-  position: relative;
-  border: 4px solid var(--color-white);
-  border-radius: 6px;
-  overflow: hidden;
-  width: 330px;
+  max-width: 600px;
 }
 
 .imgBox1 img {
